# gstcamera

./: CMakeLists.txt
